--- a/第三天/作业.html
+++ b/第三天/作业.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <script>
-    第一周第三天作业
+    // 第一周第三天作业
 // 1、
 
-    var i = 5;//4
+    var i = 5;//4 5
     function fn(i) {
         return function (n) {
-            console.log(n + (++i));// 2+5
+            console.log(n + (++i));// 
         }
     }
     var f = fn(3);
@@ -26,7 +26,7 @@
 
 // 2、
 
-    var i = 2;//3
+    var i = 2;//3 
     function fn() {
         i += 2;
         return function (n) {
@@ -41,15 +41,15 @@
 
 // 3、
 
-    var num =1;
+    var num =1;//4
     var obj = {
-        num : 2,//4
+        num : 2,//
         fn : (function () {
-            this.num *= 2;// 2
-            num +=3;
-            var num =1;//4 6
+            this.num *= 2;// 2 4
+            num +=3;//nan 1
+            var num =1;//
             return function () {
-                    num +=2;//3
+                    num +=2;//
                     this.num +=2
                     console.log(++num);
             }
@@ -58,15 +58,15 @@
     var f= obj.fn;
     f();//4
     obj.fn();//7
-    console.log(window.num,obj.num);//4,4  
+    console.log(window.num,obj.num);//4 4
 
 
 // 4、
-    var num = 10;//30
-    var obj = {num: 15};
+    var num = 10;//20 30
+    var obj = {num: 15};//30
     obj.fn = (function (num) {
         this.num += 10;
-        num *= 2;//20
+        num *= 2;// 30 29 28
         return function (n) {
             this.num += n;
             console.log(n + (--num));
@@ -77,48 +77,47 @@
     obj.fn(15);//43
     console.log(window.num, obj.num);//30 30
 
-- 5、
-```
-    var a = 1;
+// 5、
+    var a = 1;//1 2 3
     var obj1 = {
-        a: 0,
+        a: 0,//2
         fn1: (function (a) {
             this.a = a;
-            a++;
+            a++;//
             return function () {
                 this.a = a++;
                 console.log(a)
             }
         })(a)
     };
-    obj1.fn1();
+    obj1.fn1();//3
     var fn1 = obj1.fn1;
-    fn1();
-    console.log(a);
-    console.log(obj1.a);
-```
+    fn1();//4
+    console.log(a);//3
+    console.log(obj1.a);//2
+
 // 6、
 
-    var number=2;
+    var number=2;//4 8
     var obj={
-        number:4,
+        number:4,//8
         fn1:(function () {
             this.number*=2;
-            number=number*2;
-            var number=3;
+            number=number*2;//nan 3 9 27
+            var number=3;//
             return function () {
                 this.number*=2;
-                number*=3;
+                number*=3;//
                 alert(number);
             }
         })()
     };
     var fn1=obj.fn1;
-    alert(number);
-    fn1();
-    obj.fn1();
-    alert(window.number);
-    alert(obj.number);
+    alert(number);//4
+    fn1();//9
+    obj.fn1();//27
+    alert(window.number);//8
+    alert(obj.number);//8
 
 
 //7、
@@ -141,19 +140,20 @@
 // 8、
 
     var name = 'erYa';
-    var age = 9;
+    var age = 9;'xiaohua '
     age = (function (name, age) {
+      //name='erya' 'xiaohua'    age=9
         name = 'xiaoHua';
-        age = age || this.age;
+        age = age || this.age; 
         this.age = arguments[0];
-        console.log(name, age)
+        console.log(name, age)//'xiaohua'9
         return this.age;
     })(name, age);
-    console.log(name, age);'erYa' 'xiaohua'
+    console.log(name, age);//'erYa' 'xiaohua'
 
 
-- 9、
-```
+//- 9、
+
     var num = 1;
     var obj = {
         num: 2
@@ -171,7 +171,7 @@
     fn(10);
     obj.fn(20);
     console.log(num, obj.num);
-```
+
 // 10、
 
     function f5() {
@@ -185,26 +185,26 @@
     console.log(f5());//false
 
 
-- 11、
+// - 11、
 
         var obj = {
             num: 0,
             fn: function () {
-               var num = 6;
+               var num = 6;  
                 (function (num) {
                     this.num = ++this.num;
-                    num++;
+                    num++;//1
                     console.log(num)
                 })(this.num) 
             }
         }
-        obj.fn(); 
-        console.log(window.num, obj.num);
+        obj.fn(); //1
+        console.log(window.num, obj.num);//NaN 0
 
 
 // 12、
 
-     var num = 100;
+     var num = 100;//1 2
         var obj = {
             num: 2,
             fn: function () {
