--- a/第五天/练习题.html
+++ b/第五天/练习题.html
@@ -35,6 +35,35 @@
         Fn.prototype.getY();//undefined
         console.log(f1.a);//100
         console.log(f1.toString);//f
+//======================================
+        function Fn(x, y) {
+            this.x = x;
+            this.y = y;
+            this.getX = function () {
+                 console.log(this.x);
+             }
+        }
+        Fn.prototype.getX = function () {
+            return this
+        }
+        Fn.prototype.getY = function () {
+            console.log(this.z);
+        };
+        var f1 = new Fn(300, 200);
+        var f2 = new Fn(100, 200);
+        f1.__proto__.x = 300;
+        f1.__proto__.__proto__.z = 315;
+        f2.r = 300;
+        f1.x = "恭喜发财"
+        f1.__proto__.eat = function(){
+            return this.z;
+        };
+        console.log(Fn.prototype.getX().x === f2.r);
+        console.log(f1.z);
+        console.log(Fn.prototype.__proto__.__proto__);
+        console.log(f2.eat());
+        console.log( Fn.prototype.getY());
+        f1.getX()
     </script>
 </body>
 </html>
